Add sample generation composer script and readme

--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,8 @@
     },
     "require": {
         "ext-zlib": "*"
+    },
+    "scripts": {
+        "samples": "cd _samples/pdf &&  latex ../tex/*.tex"
     }
 }
