--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,15 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^11"
+        "phpunit/phpunit": "^11",
+        "friendsofphp/php-cs-fixer": "^3.64"
     },
     "require": {
         "ext-zlib": "*"
     },
     "scripts": {
-        "samples": "cd _samples/pdf &&  for i in ../tex/*.tex; do pdflatex $i;done"
+        "samples": "cd _samples/pdf &&  for i in ../tex/*.tex; do pdflatex $i;done",
+        "cs": "php-cs-fixer fix --allow-risky=yes --dry-run",
+        "cs:fix": "php-cs-fixer fix --allow-risky=yes"
     }
 }
