--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^11",
-        "friendsofphp/php-cs-fixer": "^3.64"
+        "friendsofphp/php-cs-fixer": "^3.64",
+        "phpstan/phpstan": "^1.12",
+        "phpstan/phpstan-strict-rules": "^1.6"
     },
     "require": {
         "ext-zlib": "*"
@@ -22,6 +24,7 @@
     "scripts": {
         "samples": "cd _samples/pdf &&  for i in ../tex/*.tex; do pdflatex $i;done",
         "cs": "php-cs-fixer fix --allow-risky=yes --dry-run",
-        "cs:fix": "php-cs-fixer fix --allow-risky=yes"
+        "cs:fix": "php-cs-fixer fix --allow-risky=yes",
+        "stan": "phpstan analyse --memory-limit 4G -v"
     }
 }
