--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "phpstan/phpstan-strict-rules": "^1.6"
     },
     "require": {
+        "php": "~8.1.0 || ~8.2.0 || ~8.3.0 || ~8.4.0",
         "ext-zlib": "*"
     },
     "scripts": {
