Fix unit script reference

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "samples": "cd _samples/pdf &&  for i in ../tex/*.tex; do pdflatex $i;done",
         "cs": "php-cs-fixer fix --allow-risky=yes --dry-run",
         "cs:fix": "php-cs-fixer fix --allow-risky=yes",
-        "stan": "phpstan analyse --memory-limit 4G -v"
+        "stan": "phpstan analyse --memory-limit 4G -v",
+        "unit": "phpunit --testsuite=Unit"
     }
 }
