Test using external samples

--- a/composer.json
+++ b/composer.json
@@ -17,17 +17,18 @@
         "phpunit/phpunit": "^11",
         "friendsofphp/php-cs-fixer": "^3.64",
         "phpstan/phpstan": "^2",
-        "phpstan/phpstan-strict-rules": "^2"
+        "phpstan/phpstan-strict-rules": "^2",
+        "prinsfrank/pdf-samples": "^0.0.1"
     },
     "require": {
         "php": "~8.1.0 || ~8.2.0 || ~8.3.0 || ~8.4.0",
         "ext-zlib": "*"
     },
     "scripts": {
-        "samples": "cd _samples/pdf &&  for i in ../tex/*.tex; do pdflatex $i;done",
         "cs": "php-cs-fixer fix --allow-risky=yes --dry-run",
         "cs:fix": "php-cs-fixer fix --allow-risky=yes",
         "stan": "phpstan analyse --memory-limit 4G -v",
-        "unit": "phpunit --testsuite=Unit"
+        "unit": "phpunit --testsuite=Unit",
+        "feature": "phpunit --testsuite=Feature"
     }
 }
