--- a/composer.json
+++ b/composer.json
@@ -13,16 +13,16 @@
             "PrinsFrank\\PdfParser\\Tests\\": "tests/"
         }
     },
-    "require-dev": {
-        "phpunit/phpunit": "^11",
-        "friendsofphp/php-cs-fixer": "^3.64",
-        "phpstan/phpstan": "^2",
-        "phpstan/phpstan-strict-rules": "^2",
-        "prinsfrank/pdf-samples": "^0.0.4"
-    },
     "require": {
         "php": "~8.1.0 || ~8.2.0 || ~8.3.0 || ~8.4.0",
         "ext-zlib": "*"
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.65",
+        "phpstan/phpstan": "^2.0",
+        "phpstan/phpstan-strict-rules": "^2",
+        "phpunit/phpunit": "^11.5",
+        "prinsfrank/pdf-samples": "^0.0.4"
     },
     "scripts": {
         "cs": "php-cs-fixer fix --allow-risky=yes --dry-run",
@@ -30,5 +30,8 @@
         "stan": "phpstan analyse --memory-limit 4G -v",
         "unit": "phpunit --testsuite=Unit",
         "feature": "phpunit --testsuite=Feature"
+    },
+    "config": {
+        "sort-packages": true
     }
 }
