Slightly increase memory limit to allow for parsing of very big PDF Files

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -25,4 +25,7 @@
             <directory>./src</directory>
         </include>
     </source>
+    <php>
+        <ini name="memory_limit" value="256M"/>
+    </php>
 </phpunit>
